test_scores/negative_dimers/features/Q2TAC2.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q2TAC2.pkl.xz